# journal-manager

./: Cargo.toml  README.md
src/: color.rs  journal_add.rs  journal_fs.rs  journal_read.rs  journal_types.rs  lib.rs  main.rs  notes.rs
