[package]
name = "journal-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
clap = { version = "3.2.16", features = ["derive"] }
dirs = "4.0.0"
magic-crypt = "3.1.10"
rand = "0.8.5"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
termcolor = "1.1.3"
users = "0.11.0"
